--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ authors = ["email"]
 python = "^3.8"
 torch = "2.1.1"
 pandas = "^1.3"
-scikit-learn = "^0.24"
 matplotlib = "^3.4"
 torchio = "^0.18"
 ipywidgets = "^8.1.1"
 torchvision = "0.16.1"
+ipykernel = "^6.28.0"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.4"
