--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipykernel = "^6.28.0"
 kaggle = "^1.6.3"
 mmcv = "^2.1.0"
 torchsummary = "^1.5.1"
+timm = "^0.9.12"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.4"
