--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ kaggle = "^1.6.3"
 mmcv = "^2.1.0"
 torchsummary = "^1.5.1"
 timm = "^0.9.12"
+pydantic = "^2.5.3"
 
 [tool.poetry.dev-dependencies]
 notebook = "^6.4"
